make block height the only required param in most queries
