# webserver/src/dto/txs.rs
@@ -5,6 +5,6 @@ use validator::Validate;
 pub struct TxQueryParams {
     #[validate(range(min = 1))]
     pub height: u64,
-    #[validate(range(min = 1, max = 30))]
-    pub size: u64,
+    #[validate(range(min = 0, max = 30))]
+    pub height_offset: u64,
 }
